# avs-device-sdk

./: .gitignore
ACL/src/: AVSConnectionManager.cpp
ACL/src/Transport/: HTTP2Transport.cpp  MessageRequestHandler.cpp
ADSL/include/ADSL/: DirectiveProcessor.h  DirectiveSequencer.h
ADSL/src/: DirectiveProcessor.cpp  DirectiveSequencer.cpp
ADSL/test/ADSL/: MockDirectiveSequencer.h
AVSCommon/: CMakeLists.txt
AVSCommon/AVS/src/: CapabilityResources.cpp  DialogUXStateAggregator.cpp  EndpointResources.cpp  MessageRequest.cpp
AVSCommon/AVS/test/: CapabilityResourcesTest.cpp  DialogUXStateAggregatorTest.cpp
ApplicationUtilities/DefaultClient/src/: DefaultClient.cpp
CapabilitiesDelegate/include/CapabilitiesDelegate/: CapabilitiesDelegate.h  DiscoveryEventSender.h
CapabilitiesDelegate/src/: CapabilitiesDelegate.cpp  DiscoveryEventSender.cpp
CapabilitiesDelegate/src/Utils/: DiscoveryUtils.cpp
CapabilityAgents/: CMakeLists.txt
CapabilityAgents/AIP/src/: AudioInputProcessor.cpp
CapabilityAgents/DeviceSetup/: CMakeLists.txt
CapabilityAgents/DeviceSetup/capabilityagent/src/: CMakeLists.txt  DeviceSetup.cpp  DeviceSetupMessageRequest.cpp
CapabilityAgents/Messaging/: CMakeLists.txt
CapabilityAgents/Messaging/src/: CMakeLists.txt  MessagingCapabilityAgent.cpp
Endpoints/src/: DefaultEndpointBuilder.cpp  EndpointAttributeValidation.cpp  EndpointBuilder.cpp
RegistrationManager/src/: RegistrationManager.cpp
RegistrationManager/test/: RegistrationManagerTest.cpp
SampleApp/src/: InteractionManager.cpp
Settings/test/: CMakeLists.txt
(+55 files in other folders)
